# pysink

./: .gitignore  pyproject.toml
sink/: .env  app.py  helper.py  package-lock.json  package.json  tailwind.config.js
sink/public/: app.html  script.js  style.css
sink/src/: style.css
